FEAT: Подготовить документацию Swagger (WIP)
