# app/Http/Requests/PatchCommentRequest.php
@@ -5,11 +5,15 @@ namespace App\Http\Requests;
 use App\Models\Film;
 use Illuminate\Contracts\Validation\ValidationRule;
 use Illuminate\Foundation\Http\FormRequest;
-use Illuminate\Http\Request;
-use Illuminate\Support\Facades\Auth;
-use Illuminate\Validation\Rule;
-use Illuminate\Validation\Validator;
+use OpenApi\Attributes as OA;
 
+#[OA\Schema(
+    schema: 'PatchCommentRequest',
+    properties: [
+        new OA\Property(property: 'text', description: 'Comment content', type: 'string', example: 'Alice guessed who it was, even before she came upon a Gryphon, lying fast asleep in the act of crawling away: besides all this, there was no more of the cattle in the window, I only wish it was,\' he said. (Which he certainly did NOT, being made.', nullable: true),
+    ],
+    type: 'object',
+)]
 class PatchCommentRequest extends FormRequest
 {
     /**
@@ -33,7 +37,7 @@ class PatchCommentRequest extends FormRequest
     public function rules(): array
     {
         return [
-            'text' => ['required', 'min:50', 'max:400'],
+            'text' => ['required', 'min:5', 'max:400'],
         ];
     }
 
@@ -41,7 +45,7 @@ class PatchCommentRequest extends FormRequest
     {
         return [
             'required' => 'Поле обязательно для заполнения',
-            'text.min' => 'Мнимальное количество символов 50',
+            'text.min' => 'Мнимальное количество символов 5',
             'text.max' => 'Максимальное количество символов 400',
         ];
     }
